# gradescope-calendar

./: .gitignore  README.md  crontab.example  pyproject.toml
.github/workflows/: sync.yml
src/gradecal/: __init__.py  cli.py  client.py  google_calendar.py  models.py
tests/: test_gradecal.py
