[project]
name = "gradecal"
version = "0.2.0"
description = "Sync your Gradescope assignment due dates straight into Google Calendar, with an idempotent daily sync you can automate."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Scott Huang" }]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dateutil>=2.9",
    "click>=8.1",
    "google-api-python-client>=2.120",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
]

[project.scripts]
gradecal = "gradecal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gradecal"]
